# 0721_web

./: .coverage  .gitignore  .pre-commit-config.yaml  .temp_requirements.txt  ARCHITECTURE.md  ARCHITECTURE_V2.md  Colab.py  Colab_Guide.md  INTEGRATION_REPORT.md  Makefile  README.md  TEST.md  TEST_REPORT.md  To_do_list.md  api_server.py  check_disk_space.sh  colab_bootstrap.py  colab_bootstrap_test.py  colab_dashboard_test.ipynb  colab_display.py  colab_entrypoint.py  colab_final_launcher.py  colab_launch.py  colab_launcher.py  colab_launcher_v13.py  colab_launcher_v14.py  colab_launcher_v15.py  colab_launcher_v16_integrated.py  colab_main.py  colab_run.py  colab_starter.py  colab_test.py  colab_ultimate_launcher.py  colab_v10_fixed.py  config.yml  core.py  core_run.py  create_test_db.py  db_logger.py  deploy.sh  (+63 more)
0709_wolf_88/: README.md  config.yml  integrated_logic.py  integrated_tests.py  mypy.ini  pyproject.toml  verify_db.py
0709_wolf_88/scripts/: verify_backtesting_service.py  verify_db.py  verify_factor_accuracy.py
0709_wolf_88/src/prometheus/cli/: main.py
0709_wolf_88/src/prometheus/core/: config.py
0709_wolf_88/src/prometheus/core/clients/: __init__.py  fmp.py  fred.py  taifex_db.py
0709_wolf_88/src/prometheus/core/monitoring/: dashboard.py
0709_wolf_88/src/prometheus/core/pipelines/: pipeline.py
0709_wolf_88/src/prometheus/core/pipelines/steps/: verifiers.py
0709_wolf_88/src/prometheus/core/queue/: sqlite_queue.py
0709_wolf_88/src/prometheus/entrypoints/: __init__.py  ai_analyst_app.py  backtest_worker_app.py  evolution_app.py  optimizer_app.py  results_projector_app.py
0709_wolf_88/src/prometheus/services/: factor_simulator.py  strategy_reporter.py
0709_wolf_88/src/prometheus/transcriber/: main.py  mock_worker.py  transcriber_worker.py
0709_wolf_88/src/prometheus/transcriber/core/: __init__.py
0709_wolf_88/src/prometheus/web/: dashboard.html
0709_wolf_88/tests/fixtures/: no_data_response.html
0709_wolf_88/tests/integration/clients/: test_fred_client.py
0709_wolf_88/tests/integration/pipelines/: test_data_pipeline.py
0709_wolf_88/tests/integration/transcriber/: conftest.py  test_e2e_flow.py  test_full_system_flow.py
0709_wolf_88/tests/unit/: test_feature_analyzer.py
0709_wolf_88/tests/unit/analysis/: test_data_engine.py
0709_wolf_88/tests/unit/core/clients/: test_yfinance.py
0709_wolf_88/tests/unit/core/logging/: test_log_manager.py
0709_wolf_88/tests/unit/services/: test_evolution_chamber.py  test_omniverse_engine.py
ALL_DATE/MP3_Converter_TXT/: .gitignore  MP3  colab_deployment_script.py  commander_console.py  pyproject.toml  report.html  requirements.txt  universal_launcher.py
ALL_DATE/MP3_Converter_TXT/requirements/: base.txt  quant.txt  transcriber.txt
ALL_DATE/MP3_Converter_TXT/src/: queues.py  transcriber_worker.py
ALL_DATE/MP3_Converter_TXT/tests/: conftest.py  ignition_test.py  test_e2e_flow.py
ALL_DATE/MP3_Converter_TXT/uploads/: 73acb7c9-df32-4f11-b1e3-ad09ac15c5ca_run_server.py
IPython/: display.py
MP3_Converter_TXT/: README.md  start.sh  universal_launcher.py
WEB1/: config.json
WEB_TEST/: main.py  run.py  uv_manager.py
app/: __init__.py  config.py  db.py  environment.py  server.py
apps/: main.py
config/: resource_settings.yml  services.json
core/: bootstrap_server.py  config.py  logging_config.py  monitor.py  presentation_manager.py
core_utils/: colab_display_manager.py  colab_log_manager.py  commander_console.py  port_manager.py  report_generator.py  resource_monitor.py  safe_installer.py  shared_log_queue.py  shared_state.py
database/: system_logs.duckdb  system_logs.duckdb.wal
docs/: ARCHITECTURE.md  CHANGELOG.md  Colab_Guide.md  LESSONS_LEARNED.md  MISSION_DEBRIEFING.md  TEST.md
integrated_platform/: README.md  colab_main.py  generate_log_report.py  logs.sqlite  pyproject.toml  requirements.txt  run.sh  verify_imports.py
integrated_platform/log_archive/: log_report_2025-07-22_04-35-07.txt
integrated_platform/src/: archiver.py  colab_bootstrap.py  colab_main.py  commander_console.py  config.py  display_manager.py  generate_log_report.py  integrated_logic.py  log_manager.py  main.py  sqlite_log_handler.py
integrated_platform/src/colab/: colab_manager.py
integrated_platform/src/services/: app_service.py
integrated_platform/src/static/: index.html
integrated_platform/src/ui/: display_manager.py
integrated_platform/tests/: ignition_test.py  test_colab_integration.py  test_colab_main.py  test_final_deployment.py  test_launcher.py  test_main.py
integrated_platform/tests/e2e/: test_full_system_flow.py
integration_output/: README.md  integrated_logic.py  integrated_tests.py
log_archive/: log_report_2025-07-22_04-31-51.txt
logger/: main.py
logs/: .gitkeep  detailed_log_report.md  performance_report.md  summary_report.md  system_log.md
proxy/: proxy_config.json
requirements/: base.txt  colab.txt  dev.txt  quant.txt  test.txt  transcriber.txt
run/: Colab.py  backend_runner.py  colab_dashboard.py  colab_launcher.py  colab_run_v2.py  colab_run_v3.py  colab_run_v4.py  colab_run_v5.py  colab_runner.py  dashboard.html  report.py
scheduler/: __init__.py  core_scheduler.py  database.py  db_writer.py  log_queue.py  reporting.py  task_queue.py  worker.py
scripts/: colab_run.py  e2e_test.sh  estimate_deps_size.py  generate_report.py  launch.py  phoenix_dashboard.py  requirements-report.txt  run_e2e_tests.sh  run_isolated_tests.py  run_tests.sh  run_timeout_tests.sh  smart_e2e_test.py  smart_e2e_test.sh
static/: colab_dashboard.html  index.html  main.js  style.css
templates/: dashboard.html
tests/: conftest.py  e2e_ubuntu_test.py  ignition_test.py  smart_e2e_test.py  test_all.py  test_api_server.py  test_app_transcriber.py  test_capabilities.py  test_colab_main.py  test_colab_runner.py  test_colab_simulation.py  test_e2e.py  test_e2e_dashboard.py  test_e2e_deployment.py  test_e2e_main.py  test_e2e_shutdown_flow.py  test_estimate_deps_size.py  test_integration.py  test_launch_installer.py  test_logger.py  test_module_imports.py  test_report_center.py  (+2 more)
(+184 files in other folders)
