[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "google-labs-jules[bot]",email = "161369871+google-labs-jules[bot]@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "asttokens (==3.0.0)",
    "click (==8.1.8)",
    "comm (==0.2.2)",
    "decorator (==5.2.1)",
    "executing (==2.2.0)",
    "fastapi (==0.116.1)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "ipython (==8.37.0)",
    "ipywidgets (==8.1.7)",
    "jedi (==0.19.2)",
    "jupyterlab-widgets (==3.0.15)",
    "markdown-it-py (==3.0.0)",
    "matplotlib-inline (==0.1.7)",
    "mdurl (==0.1.2)",
    "parso (==0.8.4)",
    "pexpect (==4.9.0)",
    "prompt-toolkit (==3.0.51)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "python-multipart (==0.0.20)",
    "rich (==14.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "stack-data (==0.6.3)",
    "starlette (==0.47.2)",
    "traitlets (==5.14.3)",
    "typer (==0.16.0)",
    "typing-extensions (==4.14.1)",
    "typing-inspection (==0.4.1)",
    "uvicorn (==0.30.6)",
    "wcwidth (==0.2.13)",
    "widgetsnbextension (==4.0.14)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
