[tool.poetry]
name = "integrated-platform"
version = "0.1.0"
description = "整合型應用平台"
authors = ["Jules <161369871+google-labs-jules[bot]@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "integrated_platform"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.116.1"
uvicorn = "^0.30.6"
requests = "*"
pydantic = "^2.11.7"
python-multipart = "^0.0.20"
ipython = "^8.37.0"
ipywidgets = "^8.1.7"
psutil = "*"
annotated-types = "*"
anyio = "*"
asttokens = "*"
click = "*"
comm = "*"
decorator = "*"
executing = "*"
h11 = "*"
idna = "*"
jedi = "*"
jupyterlab-widgets = "*"
markdown-it-py = "*"
matplotlib-inline = "*"
mdurl = "*"
parso = "*"
pexpect = "*"
prompt-toolkit = "*"
ptyprocess = "*"
pure-eval = "*"
pydantic-core = "*"
pygments = "*"
rich = "*"
shellingham = "*"
sniffio = "*"
stack-data = "*"
starlette = "*"
traitlets = "*"
typer = "*"
typing-extensions = "*"
typing-inspection = "*"
wcwidth = "*"
widgetsnbextension = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.poetry.extras]
full = ["torch", "tensorflow"] # 範例：定義一個名為 "full" 的 extra，包含大型套件

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
