# --- 完全替換 [tool.poetry] 區塊 ---
[tool.poetry]
name = "prometheus-fire"
version = "0.9.0"
description = "Advanced Quantitative Research Framework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prometheus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
typer = {extras = ["all"], version = "*"}
pandas = "^2.2.2"
numpy = "<2.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"
fredapi = "^0.5.2"
yfinance = "^0.2.65"
duckdb = "^1.0.0"
plotly = "^5.22.0"
deap = "^1.4.1"
fastapi = {extras = ["all"], version = "^0.111.0"}
vectorbt = "^0.28.0"
aiosqlite = "^0.21.0"
rich = "^14.0.0"
psutil = "^5.9.5"
pybreaker = "^0.6.0"
uvicorn = "^0.22.0"
pyyaml = "^6.0.1"
openpyxl = "^3.1.5"
pandas-ta = "^0.3.14b0"
setuptools = "^80.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.8"
deptry = "^0.17.0"
pytest-timeout = "^2.3.1"

# --- 完全替換 [tool.pytest.ini_options] 區塊 ---
[tool.pytest.ini_options]
# 為每個測試設定 60 秒的超時熔斷
timeout = 60
# 告知 Pytest 我們的原始碼現在位於 src 目錄下
pythonpath = ["src"]
asyncio_mode = "auto"

# --- 如果不存在則新增，如果存在則更新 [tool.ruff] 和 [tool.ruff.lint] ---
[tool.ruff]
line-length = 88
# 告知 Ruff 我們的原始碼目錄
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
