[tool.poetry]
name = "integrated-platform"
version = "0.2.0"
description = "API-driven dynamic frontend with automated testing"
authors = ["Commander"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
python-multipart = "*"

# 將測試工具定義為開發依賴 (dev-dependencies)
[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
httpx = "^0.23.0" # FastAPI 推薦的測試用 HTTP client

# 告知 pytest 在 src 目錄下尋找原始碼，解決導入問題
[tool.pytest.ini_options]
pythonpath = ["src"]
